--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="red">#FF0000</color>
     <color name="white">#FFFFFF</color>
     <color name="dark_red">#EF5D44</color>
+    <color name="transparent">#00000000</color>
+    <color name="black">#000000</color>
 </resources>
